--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost/aniflix
 spring.datasource.username=${ROOT_1:root}
 spring.datasource.password=${ROOT_PASSWORD_1:root123}
 server.error.include-stacktrace=never
+api.security.token.secret=${JWT_SECRET:123456}
