Limpado código do VideoController, além de correções e testes unitários. Testes de integração ainda em andamento

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,1 @@
-spring.datasource.url=jdbc:mysql://localhost/aniflix_test
+spring.datasource.url=jdbc:mysql://localhost/aniflix_test?createDatabaseIfNotExist=true
