--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend.challenge.edicao.1
-spring.datasource.url=jdbc:mysql://localhost/aniflix
+spring.datasource.url=jdbc:mysql://localhost/aniflix?createDatabaseIfNotExist=true
 spring.datasource.username=${ROOT_1:root}
-spring.datasource.password=${ROOT_PASSWORD_1:root123}
+spring.datasource.password=${ROOT_PASSWORD_1:123}
 server.error.include-stacktrace=never
 api.security.token.secret=${JWT_SECRET:123456}
